--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,9 @@
 [submodule "pack/ac/opt/vim-unimpaired"]
 	path = pack/ac/opt/vim-unimpaired
 	url = https://github.com/tpope/vim-unimpaired.git
+[submodule "pack/ac/opt/vim-sleuth"]
+	path = pack/ac/opt/vim-sleuth
+	url = https://github.com/tpope/vim-sleuth.git
+[submodule "pack/ac/opt/vim-vinegar"]
+	path = pack/ac/opt/vim-vinegar
+	url = https://github.com/tpope/vim-vinegar.git
